 - remove gl.Fog, gl.FogCoord, gl.SecondaryColor
 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - move GetConfig* to LuaUnsyncedRead

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
 - remove /DynamicSky command and keybinding
 - remove /{More,Less}Clouds commands
 - remove 3DTrees config-setting
 - remove /adv{map,model}shading commands
 - remove Adv{Map,Unit}Shading config-settings
 - remove ForceDisableShaders config-setting
 - remove Use{V,P}BO config-settings
 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)

Fixes:
 - fix infinite backtracking loop in PFS
 - fix #5814 (broken slopemap indexing for terrain buildability tests)
 - fix #5803 (move goals cancelled when issued onto blocked terrain)
 - fix Spring.{G,S}etConfigFloat not being callable
 - fix Spring.GetPlayerRoster sometimes excluding active players



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload