@@ -55,6 +55,7 @@ class LuaUnsyncedCtrl {
 		static int SetDrawGroundDeferred(lua_State* L);
 		static int SetDrawModelsDeferred(lua_State* L);
 		static int SetVideoCapturingMode(lua_State* L);
+		static int SetVideoCapturingTimeOffset(lua_State* L);
 
 		static int SetWaterParams(lua_State* L);
 		static int SetSoundEffectParams(lua_State* L);
