@@ -208,6 +208,7 @@ CGlobalRendering::CGlobalRendering()
 	, teamNanospray(configHandler->GetBool("TeamNanoSpray"))
 	, active(true)
 	, isVideoCapturing(false)
+	, videoCapturingTimeOffset(0.0f)
 	, compressTextures(false)
 	, haveATI(false)
 	, haveMesa(false)
